--- a/CSharp-Technology-OOP/Labs/04Polymorphism-Lab/01MathOperations/01MathOperations.csproj
+++ b/CSharp-Technology-OOP/Labs/04Polymorphism-Lab/01MathOperations/01MathOperations.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_01MathOperations</RootNamespace>
+    <RootNamespace>Operations</RootNamespace>
   </PropertyGroup>
 
 </Project>
