--- a/CSharp-OOP/HomeWorks/04Polymorphism-Exercise/01Vehicles/01Vehicles.csproj
+++ b/CSharp-OOP/HomeWorks/04Polymorphism-Exercise/01Vehicles/01Vehicles.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_01Vehicles</RootNamespace>
+    <RootNamespace>Vehicles</RootNamespace>
   </PropertyGroup>
 
 </Project>
