--- a/CSharp-OOP/Labs/07ReflectionAndAttributes-Lab/02HighQualityMistakes/02HighQualityMistakes.csproj
+++ b/CSharp-OOP/Labs/07ReflectionAndAttributes-Lab/02HighQualityMistakes/02HighQualityMistakes.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Stealer</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\01Stealer\01Stealer.csproj" />
+  </ItemGroup>
+
 </Project>
