--- a/CSharp-Web/CSharpWebFund-ForumApp-January2024/ForumApp/appsettings.json
+++ b/CSharp-Web/CSharpWebFund-ForumApp-January2024/ForumApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-9BA0UH0;Database=ForumApp2024;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
