--- a/CSharp-Web/CSharpWebFund-ForumApp-January2024/ForumApp/Forum.App.csproj
+++ b/CSharp-Web/CSharpWebFund-ForumApp-January2024/ForumApp/Forum.App.csproj
@@ -19,4 +19,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ForumApp.Data\ForumApp.Data.csproj" />
+    <ProjectReference Include="..\ForumApp.ViewModels\ForumApp.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
