--- a/CSharp-Web/CSharpWebFund-ForumApp-January2024/ForumApp/Forum.App.csproj
+++ b/CSharp-Web/CSharpWebFund-ForumApp-January2024/ForumApp/Forum.App.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ForumApp.Data\ForumApp.Data.csproj" />
+    <ProjectReference Include="..\ForumApp.Services\ForumApp.Services.csproj" />
     <ProjectReference Include="..\ForumApp.ViewModels\ForumApp.ViewModels.csproj" />
   </ItemGroup>
 
